# BugTracker

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 756e9e5fe99e_.py  a40336eb3dc5_roles_can_be_nullable.py  ae144d1f417c_rename_bug_to_issue_and_add_issue_type.py
app/: main.py
app/Api/: authorization.py  router.py
app/Api/Endpoints/: bug.py  issue.py  project.py
app/Configuration/Helpers/: authorization_tools.py  tools.py
app/Core/Domain/: base.py  base_model.py
app/Core/Domain/Enums/: issue_type.py  roles.py  severity.py  status.py
app/Core/Domain/Models/: attachment.py  bug.py  comment.py  issue.py  mongo_db.py  notification.py  project.py  project_user.py  user.py
app/Core/Schemas/: bug.py  issue.py  project.py  user.py
app/Persistance/: database.py  database_initialization.py  database_queries.py  session.py  unit_of_work.py
app/Persistance/Repositories/: bug_repository.py  issue_repository.py  project_repository.py  user_repository.py
app/Security/: auth_middleware.py  jwt_handler.py
